--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </head>
   <body>
     <div class="container">
-      <input type="text" class="inputBox" />
-      <button class="inputButton">Add to list</button>
-      <div class="listItems"></div>
+      <h1>Todo App</h1>
+      <div class="listContainer">
+        <input type="text" class="inputBox" />
+        <div class="listItems"></div>
+      </div>
     </div>
   </body>
 </html>
